# ScenarioCraft

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  setup.cfg
assets/roads/: urban_two_way_parking.xodr
docs/: architecture.md  local_llm.md  repository_layout.md  road_assets.md  scenario_families.md  tool_setup.md
docs/architecture/: REFACTOR_PLAN_UPDATED_STEP3.md  STEP_3E_PLAYBACK_PROVENANCE_DIAGNOSIS.md  STEP_3F_OPENDRIVE_BINDING_PLAN.md
docs/diagrams/: scenariocraft-architecture.d2
examples/: README.md  crossing_vehicle.txt  cut_in.txt  lead_vehicle_braking.txt  oncoming_turn_across_path.txt
outputs/demo/: esmini_log.txt  esmini_stderr.txt  input.txt  qc_config.xml  qc_report.json  qc_result.xqar  scenario.xosc  scenario_spec.json  validation_report.md
scenariocraft/: core_boundary.py  main.py
scenariocraft/_legacy_streamlit/: advanced_view.py  app.py  external_view.py  media_view.py  styles.py  workspace_components.py  workspace_view.py
scenariocraft/api/: __init__.py  app.py
scenariocraft/application/: __init__.py  candidate_generation.py  contracts.py  controlled_cases.py  demo_cases.py  external_scenario.py  generated_scenario.py  orchestrator.py
scenariocraft/core/: __init__.py
scenariocraft/external_tools/: __init__.py  asam_qc.py  esmini.py  opendrive_mcp.py
scenariocraft/integrations/: __init__.py  openai_repair.py
scripts/: install_asamqc.py  install_esmini.py
tests/: local_llm.py  test_agentic_loop.py  test_application_workflow.py  test_artifact_consistency_checks.py  test_artifact_consistency_probes.py  test_asam_qc_tool.py  test_build_package_boundaries.py  test_check_result.py  test_cli.py  test_core_boundary.py  test_crossing_vehicle_family.py  test_cut_in_family.py  test_default_generation.py  test_esmini_tool.py  test_fake_repair_provider.py  test_family_asset_pipeline.py  test_family_checks.py  test_family_taxonomy.py  test_http_api.py  test_install_asamqc_script.py  test_intent_eval.py  test_intent_provider_contract.py  test_justfile.py  test_lead_vehicle_braking_checks.py  test_local_llm_workflow_live.py  test_metadata_extractor.py  test_mock_generator.py  test_multi_lane_same_direction_road.py  test_oncoming_turn_across_path_family.py  test_openai_intent_provider.py  test_openai_intent_provider_live.py  test_openai_repair_provider.py  test_openai_repair_provider_live.py  test_opendrive_mcp_live.py  test_opendrive_mcp_tool.py  test_patch_spec.py  test_pedestrian_occlusion_checks.py  test_pedestrian_occlusion_probes.py  test_pedestrian_occlusion_repair.py  test_preview_2d.py  (+29 more)
(+217 files in other folders)
