[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scenariocraft-agent"
version = "0.1.0"
description = "Deterministic research prototype for structured autonomous-driving scenario generation and validation."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib>=3.8,<4",
  "scenariogeneration>=0.16,<0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "rust-just>=1.55,<2",
]
openai = ["openai>=1.66,<3"]
qc = [
  "asam-qc-framework>=1.1,<1.2",
  "asam-qc-openscenarioxml>=1.0,<1.1",
]
web = ["streamlit>=1.37,<2"]
api = [
  "starlette>=1.0,<2",
  "uvicorn>=0.49,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scenariocraft*"]
exclude = ["docs*", "external*", "outputs*", "tests*", "third_party*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
