[metadata]
name = scenariocraft-agent
version = 0.1.0
description = Deterministic research prototype for structured autonomous-driving scenario generation and validation.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    scenariogeneration>=0.16,<0.17

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.4,<9
qc =
    asam-qc-framework>=1.1,<1.2
    asam-qc-openscenarioxml>=1.0,<1.1

[tool:pytest]
testpaths = tests
