[metadata]
name = scenariocraft-agent
version = 0.1.0
description = Deterministic research prototype for structured autonomous-driving scenario generation and validation.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib>=3.8,<4
    scenariogeneration>=0.16,<0.17

[options.packages.find]
where = .
include =
    scenariocraft*
exclude =
    docs*
    external*
    outputs*
    tests*
    third_party*

[options.extras_require]
dev =
    pytest>=8.4,<9
openai =
    openai>=1.66,<3
qc =
    asam-qc-framework>=1.1,<1.2
    asam-qc-openscenarioxml>=1.0,<1.1
web =
    streamlit>=1.37,<2

[tool:pytest]
testpaths = tests
